<resources>
    <string name="app_name">Easy HealthCare</string>
    <string name="motd">Bem vindo ao Easy HealthCare!</string>
    <string name="intro_text">Este é um aplicativo que lhe auxiliará a controlar consultas médicas, prescrições de medicamentos, verificar exames, entre outras coisas. </string>
    <string name="intro_text2">Para começar a usar, você deve cadastrar alguns dados pessoais seus. Clique no botão abaixo para continuar.</string>
    <string name="copyright">Copyright © 2016 Spallacety. All rights reserved.</string>
    <string name="autor">by Lucas Rodrigues</string>
    <string name="projeto_final">Projeto final da disciplina de Programação Orientada a Objeto (Prof. Rogério Silva), do módulo II do curso de ADS do IFPI.</string>
    <string-array name="sexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
    <string name="inserir_dados">Inserir dados</string>
    <string name="bem_vindo">Bem vindo!</string>
    <string name="ola">Olá, %1$s!</string>
    <string name="perfil">Perfil</string>
    <string name="editar_dados">Editar dados</string>
    <string name="consulta_perfil">Consulta</string>
    <string name="sobre">Sobre o aplicativo</string>
    <string name="possui_patologias">Se possui alguma dessas patologias, marque-a(s):</string>
    <string name="encerrar_aplicacao">Os seus dados serão apagados e a aplicação será encerrada.</string>
    <string name="apagar_dados">Deseja realmente apagar seus dados? Essa ação não pode ser desfeita.</string>
    <string name="preencha_dados">Preencha todos os campos!</string>
    <string name="digite_nome">Digite seu nome</string>
    <string name="mascara_data">DD/MM/AAAA</string>
    <string name="dados_salvos">Seus dados foram salvos!</string>
    <string name="deseja_sair">Deseja realmente sair?</string>
    <string name="estou_pronto">Estou pronto!</string>
    <string name="prescricoes">Prescrições</string>
    <string name="prescricao">Prescrição</string>
    <string name="exames">Exames</string>
    <string name="nome">Nome</string>
    <string name="data_de_nascimento">Data de nascimento</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="feminino">Feminino</string>
    <string name="hipertenso">Hipertenso</string>
    <string name="cardiaco">Cardiaco</string>
    <string name="diabetico">Diabetico</string>
    <string name="nome2">Nome: </string>
    <string name="data_de_nascimento2">Data de nascimento: </string>
    <string name="idade2">Idade: </string>
    <string name="sexo2">Sexo: </string>
    <string name="voltar">Voltar</string>
    <string name="sair">Sair</string>
    <string name="apagar">Apagar</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok">Ok</string>
    <string name="data">Data</string>
    <string name="especialidade">Especialidade</string>
    <string name="local">Local</string>
    <string name="horario">Horário</string>
    <string name="novo_agendamento">Novo agendamento</string>
    <string name="consultas">Consultas</string>
    <string name="dados_salvos_consulta">Agendamento salvo!</string>
    <string name="nao_realizadas">Não realizadas</string>
    <string name="realizadas">Realizadas</string>
    <string name="marcar_realizada">Esta consulta foi realizada?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="apagar_consulta">A consulta será apagada.</string>
    <string name="apagar_consulta_all">A consulta e todos os seus dados (prescrições e exames) serão apagados. Continuar?</string>
    <string name="apagar_prescricao">A prescrição será apagada.</string>
    <string name="apagar_exame">O exame será apagado.</string>
    <string name="confirmacao_apagar">Apagado.</string>
    <string name="menu_principal">Menu</string>
    <string name="editar_consulta">Editar consulta</string>
    <string name="detalhes">Detalhes</string>
    <string name="ver_consulta">Ver consulta</string>
    <string name="pesquisar">Pesquisar...</string>
    <string name="dados_salvos_prescricao">Prescrição salva.</string>
    <string name="dados_salvos_exame">Exame salvo.</string>
    <string name="inserir_prescricao">Inserir prescrição</string>
    <string name="editar_prescricao">Editar prescrição</string>
    <string name="tipo">Tipo</string>
    <string name="exame">Exame</string>
    <string name="novo_exame">Novo exame</string>
    <string name="editar_exame">Editar exame</string>
</resources>
