<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.ifpi.easyhealthcare.NovaPessoa">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/nome"/>
            <EditText
                android:id="@+id/nomePessoa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_nome"
                android:singleLine="true"
                android:imeOptions="actionNext"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/data_de_nascimento"/>
            <EditText
                android:id="@+id/dataPessoa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mascara_data"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/sexo"/>
            <Spinner
                android:id="@+id/sexoPessoa"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/sexo">
            </Spinner>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/possui_patologias"/>
            <CheckBox
                android:id="@+id/hipertenso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/hipertenso"/>
            <CheckBox
                android:id="@+id/cardiaco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/cardiaco"/>
            <CheckBox
                android:id="@+id/diabetico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/diabetico"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:backgroundTint="@color/buttonColor"
                android:onClick="salvarPessoa"
                android:text="@string/salvar"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
