<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.edu.ifpi.easyhealthcare.Intro">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="144dp"
                android:scaleType="centerInside"
                android:src="@drawable/intro_image"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:layout_gravity="center"
                android:textSize="25sp"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/motd"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="18sp"
                android:gravity="center_horizontal"
                android:text="@string/intro_text"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:gravity="center_horizontal"
                android:text="@string/intro_text2"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="click"
                android:backgroundTint="@color/buttonColor"
                android:textColor="@color/white"
                android:text="@string/estou_pronto"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
