<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.ifpi.easyhealthcare.EditarConsulta">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:padding="5dp"
                android:text="@string/especialidade"/>
            <EditText
                android:id="@+id/especialidade_editar_consulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/especialidade"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:padding="5dp"
                android:text="@string/local"/>
            <EditText
                android:id="@+id/local_editar_consulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:hint="@string/local"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:padding="5dp"
                android:text="@string/data"/>
            <EditText
                android:id="@+id/data_editar_consulta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/data"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:padding="5dp"
                android:text="@string/horario"/>
            <EditText
                android:id="@+id/horario_editar_consulta"
                android:inputType="datetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/horario"/>
            <Button
                android:onClick="salvarConsulta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:backgroundTint="@color/buttonColor"
                android:text="@string/salvar"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
