<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="br.edu.ifpi.easyhealthcare.NovoExame">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:padding="5dp"
        android:text="@string/tipo"/>
    <EditText
        android:id="@+id/tipo_novo_exame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/tipo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryDark"
        android:padding="5dp"
        android:text="@string/detalhes"/>
    <EditText
        android:id="@+id/detalhes_novo_exame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/detalhes"/>
    <Button
        android:onClick="salvarExame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:backgroundTint="@color/buttonColor"
        android:text="@string/salvar"/>
</LinearLayout>
